fixed jumping barn illo

--- a/src/components/EmailFormStyles.scss
+++ b/src/components/EmailFormStyles.scss
@@ -147,7 +147,7 @@
   }
 }
 
-.succsess-message {
+.success-message {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -158,7 +158,7 @@
   font-size: 1.5rem;
   font-weight: 700;
   text-align: center;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
