--- a/src/index.scss
+++ b/src/index.scss
@@ -37,6 +37,12 @@ code {
     monospace;
 }
 
+.hide-on-mobile {
+  @media (max-width: 767px) {
+    display: none;
+  }
+}
+
 .main-container {
   display: flex;
   flex-direction: column;
@@ -221,22 +227,20 @@ code {
     height: 11rem;
     width: auto;
     margin: 1rem 0 0 0;
+    opacity: 0;
+    animation: fadeIn 3s ease-in forwards;
   
     @media (min-width: 480px) {
       margin: 2rem 0 0 0;
     }
   }
-}
-
-.barn-image-save {
-  height: 7rem;
-  width: auto;
-  margin: 0;
-
-  @media (min-width: 480px) {
-    height: 11rem;
-    margin: 0.75rem 0 1rem 0;
+  
+  @keyframes fadeIn {
+    to {
+      opacity: 1;
+    }
   }
+  
 }
 
 .password-input-wrapper {
@@ -246,7 +250,7 @@ code {
 }
 
 .password-input {
-  padding-right: 40px; /* space for icon */
+  padding-right: 40px;
   width: 100%;
 }
 
