--- a/src/routes/HomeStyles.scss
+++ b/src/routes/HomeStyles.scss
@@ -153,6 +153,20 @@
   }
 }
 
+.barn-image-save {
+  height: 7rem;
+  width: auto;
+  margin: 0;
+  opacity: 0;
+  animation: fadeIn 2s ease-in forwards;
+  animation-delay: 2s;
+
+  @media (min-width: 480px) {
+    height: 11rem;
+    margin: 0.75rem 0 1rem 0;
+  }
+}
+
 .ellia {
   animation: slideInFadeFromLeft 2.5s ease-out forwards;
   transform: translateX(-100%);
